Fix clang errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ smtg_enable_vst3_sdk()
 smtg_add_vst3plugin(NotationChordHelper
     source/version.h
     source/cids.h
+    source/key_signature.h
     source/processor.h
     source/processor.cpp
     source/controller.h
